[Arc] Add makeshift input preprocessing
Many CIRCT frontends don't generate clean HW representations of their
inputs, but instead intersperse SV dialect operations to explicitly
materialize named wires. Add a makeshift `StripSV` pass to remove some
of the trivial SV dialect ops (wires just for the sake of naming) and
to replace `seq.firreg` with `seq.compreg` throughout the input. At a
later point we'll want to introduce a "register" op interface such that
passes can inquire about a register op's semantics in a uniform manner.

Similarly, the Seq dialect lacks a memory construct. The FIRRTL pipeline
lowers its `firrtl.mem` ops into HW generator ops. Add a `InferMemories`
pass that converts this generator op into a proper `arc.memory` op with
associated `arc.memory_read` and `arc.memory_write` operations.

Co-authored-by: Martin Erhart <maerhart@outlook.com>
Co-authored-by: Zachary Yedidia <zyedidia@gmail.com>

--- a/lib/Dialect/Arc/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Arc/Transforms/CMakeLists.txt
@@ -1,18 +1,22 @@
 add_circt_dialect_library(CIRCTArcTransforms
   Dedup.cpp
+  InferMemories.cpp
   InlineModules.cpp
   MakeTables.cpp
   SinkInputs.cpp
   SplitLoops.cpp
+  StripSV.cpp
 
   DEPENDS
   CIRCTArcTransformsIncGen
 
   LINK_LIBS PUBLIC
   CIRCTArc
-  CIRCTHW
   CIRCTComb
+  CIRCTHW
+  CIRCTSeq
   CIRCTSupport
+  CIRCTSV
   MLIRIR
   MLIRPass
   MLIRTransformUtils
