[Arc] Add variadic op simplification pass
Add the `SimplifyVariadicOps` pass which takes the common combinational
operations and converts them from their variadic representation into a
chain of binary operations. The pass reorders the variadic operands such
that they appear in the order in which their definitions appear in the
basic block. The binary operations are then inserted as soon as both
their operands become available. This distributes the operations through
the block and reduces the lifetimes of the original op's operands.

--- a/lib/Dialect/Arc/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Arc/Transforms/CMakeLists.txt
@@ -3,6 +3,7 @@ add_circt_dialect_library(CIRCTArcTransforms
   InferMemories.cpp
   InlineModules.cpp
   MakeTables.cpp
+  SimplifyVariadicOps.cpp
   SinkInputs.cpp
   SplitLoops.cpp
   StripSV.cpp
