[Arc] Add Comb to MLIR Arith conversion pass
Add an experimental pass to convert operations in the Comb dialect to
their equivalent in the Arith dialect. The pass isn't used anywhere yet,
but conversion to Arith allows all canonicalizations defined on that
dialect to take effect before mapping things to LLVM to generate a
software model.

--- a/lib/Dialect/Arc/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Arc/Transforms/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_circt_dialect_library(CIRCTArcTransforms
+  ConvertCombToArith.cpp
   Dedup.cpp
   InferMemories.cpp
   InlineArcs.cpp
@@ -18,9 +19,10 @@ add_circt_dialect_library(CIRCTArcTransforms
   CIRCTArc
   CIRCTComb
   CIRCTHW
+  CIRCTSV
   CIRCTSeq
   CIRCTSupport
-  CIRCTSV
+  MLIRArithDialect
   MLIRIR
   MLIRPass
   MLIRTransformUtils
