[Arc] Add deduplication pass
Add the `Dedup` pass which deduplicates arcs with identical definitions.
If arcs differ only by constant values, the pass outlines the constants
such that the arcs can be deduplicated.

Identical arcs are surprisingly common since splitting modules along the
fundamental state elements yields a finer-grained subdivision than the
modules themselves, which has the potential to uncover additional
redundancies.

Co-authored-by: Martin Erhart <maerhart@outlook.com>
Co-authored-by: Zachary Yedidia <zyedidia@gmail.com>

--- a/include/circt/Dialect/Arc/CMakeLists.txt
+++ b/include/circt/Dialect/Arc/CMakeLists.txt
@@ -1,2 +1,7 @@
 add_circt_dialect(Arc arc)
 add_circt_dialect_doc(Arc arc)
+
+set(LLVM_TARGET_DEFINITIONS Passes.td)
+mlir_tablegen(Passes.h.inc -gen-pass-decls)
+add_public_tablegen_target(CIRCTArcTransformsIncGen)
+add_circt_doc(Passes ArcPasses -gen-pass-doc)
