--- a/lib/Dialect/Arc/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Arc/Transforms/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_circt_dialect_library(CIRCTArcTransforms
   Dedup.cpp
   InlineModules.cpp
+  SplitLoops.cpp
 
   DEPENDS
   CIRCTArcTransformsIncGen
@@ -8,6 +9,7 @@ add_circt_dialect_library(CIRCTArcTransforms
   LINK_LIBS PUBLIC
   CIRCTArc
   CIRCTHW
+  CIRCTSupport
   MLIRIR
   MLIRPass
   MLIRTransformUtils
