[Arc] Add lookup table generation pass
Add the `MakeTables` pass which finds small arcs and converts them into
a lookup table where possible.

Co-authored-by: Martin Erhart <maerhart@outlook.com>
Co-authored-by: Zachary Yedidia <zyedidia@gmail.com>

--- a/lib/Dialect/Arc/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Arc/Transforms/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_circt_dialect_library(CIRCTArcTransforms
   Dedup.cpp
   InlineModules.cpp
+  MakeTables.cpp
   SinkInputs.cpp
   SplitLoops.cpp
 
@@ -10,6 +11,7 @@ add_circt_dialect_library(CIRCTArcTransforms
   LINK_LIBS PUBLIC
   CIRCTArc
   CIRCTHW
+  CIRCTComb
   CIRCTSupport
   MLIRIR
   MLIRPass
